fix broken links

--- a/docs/_snippets/cloud/ai-privacy-policy-short.mdx
+++ b/docs/_snippets/cloud/ai-privacy-policy-short.mdx
@@ -17,4 +17,4 @@ Each agent may use the following data to provide recommendations:
 
 Elementary does **not collect or share any sensitive data**, and you can review and align our AI use with your organization’s governance policies at any time.
 
-For full details, see our [AI Privacy Policy](/cloud/ai-privacy).
+For full details, see our [AI Privacy Policy](/cloud/general/ai-privacy-policy).
