--- a/docs/cloud/general/ai-privacy-policy.mdx
+++ b/docs/cloud/general/ai-privacy-policy.mdx
@@ -3,7 +3,7 @@ title: "AI Privacy Policy"
 icon: "user-lock"
 ---
 
-**We are committed to maintaining the highest standards of data privacy and protection. This AI Privacy Policy outlines how we handle data in the context of our AI-powered features, including our [suite of AI agents](/cloud/agents).**
+**We are committed to maintaining the highest standards of data privacy and protection. This AI Privacy Policy outlines how we handle data in the context of our AI-powered features, including our [suite of AI agents](/cloud/ai-agents).**
 
 Elementary’s AI features are designed to enhance the user experience across key workflows, enabling natural language responses, automated data exploration, intelligent issue triage and resolution, proactive test and governance recommendations, and query optimization. These features are strictly opt-in and must be explicitly enabled for each customer instance.
 
