--- a/docs/oss/integrations/dbt-fusion.mdx
+++ b/docs/oss/integrations/dbt-fusion.mdx
@@ -99,9 +99,10 @@ In addition to the above, there are some features that are currently missing fro
 
 For each one of the issues below, we've included a link to the dbt-fusion github repository - **please upvote these features if they are important to you!**
 
-1. [Test compilation errors are not being reported](https://github.com/dbt-labs/dbt-fusion/issues/686) - If a test query fails, Elementary will report it as expected. 
-However, if there is a compilation error / any error that comes before the actually test query ("error" status in dbt-core), it will currently be missing.
+1. [Tests with error status are not being reported](https://github.com/dbt-labs/dbt-fusion/issues/686) - If a test fails "normally" (e.g. not_null fails on rows with null values), Elementary will report it as expected with a "fail" status. 
+However, if there is a compilation error / any error that comes before the actual test query ("error" status in dbt-core), it will currently be missing.
 2. [Source freshness results are not reported](https://github.com/dbt-labs/dbt-fusion/issues/720)
-3. [Group artifacts are not reported](https://github.com/dbt-labs/dbt-fusion/issues/25)
-4. [Compiled code is missing from dbt artifact tables](https://github.com/dbt-labs/dbt-fusion/issues/723)
-5. [Failed row count is missing from dbt artifact tables](https://github.com/dbt-labs/dbt-fusion/issues/724)
+3. [Exposure artiracts are not reported](https://github.com/dbt-labs/dbt-fusion/issues/859)
+4. [Group artifacts are not reported](https://github.com/dbt-labs/dbt-fusion/issues/25)
+5. [Compiled code is missing from dbt artifact tables](https://github.com/dbt-labs/dbt-fusion/issues/723)
+6. [Failed row count is missing from dbt artifact tables](https://github.com/dbt-labs/dbt-fusion/issues/724)
