add mcp section to the homepage

--- a/docs/home.mdx
+++ b/docs/home.mdx
@@ -220,6 +220,25 @@ icon: "house"
         </div>
       </div>
   </div>
+  <div class="home__theme-purple-dark">
+      <div class="home__container">
+        <div class="home__2col">
+          <div class="home__2col-content is-centered">
+            <h2 class="home__heading-lg">Elementary context <br/>in your tools.</h2>
+            <p>The MCP Server brings models, lineage, and incidents into tools like Cursor and Claude—so you can act without leaving your workflow.</p>
+            <div><a
+            href="/cloud/mcp/intro"
+            class="home__button"
+          >
+            Start here
+          </a></div>
+          </div>
+          <div class="home__mcp-image">
+              <img src="https://res.cloudinary.com/diuctyblm/image/upload/v1756374052/Docs_u3uaft.svg" noZoom/>
+          </div>
+        </div>
+    </div>
+  </div>
   <div class="home__page">
     
     <section>
@@ -385,6 +404,7 @@ icon: "house"
       </div>
     </div>
   </div>
+  
   <div class="home__theme-purple">
       <div class="home__container">
         <div class="home__guides-layout">
