add privacy to homepage

--- a/docs/home.mdx
+++ b/docs/home.mdx
@@ -204,8 +204,8 @@ icon: "house"
               <InfoCard
                 label="Article"
                 labelColor="gray"
-                title="Integrations"
-                link="/cloud/features/integrations"
+                title="Security and Privacy"
+                link="/cloud/general/security-and-privacy"
                 layout="horizontal"
               />
               <InfoCard
@@ -224,7 +224,7 @@ icon: "house"
       <div class="home__container">
         <div class="home__2col">
           <div class="home__2col-content is-centered">
-            <h2 class="home__heading-lg">Elementary context <br/>in your tools.</h2>
+            <h2 class="home__heading-lg">Elementary context <br/>in your tools</h2>
             <p>The MCP Server brings models, lineage, and incidents into tools like Cursor and Claude—so you can act without leaving your workflow.</p>
             <div><a
             href="/cloud/mcp/intro"
