--- a/docs/oss/integrations/dbt-fusion.mdx
+++ b/docs/oss/integrations/dbt-fusion.mdx
@@ -4,7 +4,7 @@ title: "dbt fusion (Beta)"
 
 <Note>Note: dbt-fusion support in Elementary is still in beta, as is dbt-fusion itself. Please see below a list of features that are not yet implemented.</Note>
 
-Elemmentary OSS integrates with dbt-fusion, starting with version 0.20.
+Elementary's dbt package integrates with dbt-fusion, starting with version 0.20.
 Fusion is a complete rewrite of the dbt engine, and provides many benefits, including enhanced performance and static analysis. 
 
 For more details about dbt-fusion capabilities please consult the [dbt-fusion docs](https://docs.getdbt.com/docs/fusion/about-fusion).
