BI small docs fixes

--- a/docs/cloud/integrations/bi/hex.mdx
+++ b/docs/cloud/integrations/bi/hex.mdx
@@ -13,7 +13,7 @@ Make sure you create a Hex Workspace token with read access for all categories a
 
 ### Connecting Hex to Elementary
 
-Navigate to the **Account settings > Environments** and choose the environment to which you would like to connect Elementary.
+Navigate to the **Account settings > Environments** and choose the environment to which you would like to connect Hex.
 Choose the Hex connection and provide the following details to validate and complete the integration.
 
 - **Base URL**: Your Hex workspace URL. For example: `https://app.hex.tech/my-workspace/`
