--- a/docs/cloud/integrations/bi/power-bi.mdx
+++ b/docs/cloud/integrations/bi/power-bi.mdx
@@ -25,7 +25,7 @@ Those features will allow Elementary to get all required info for computing the 
 
 ### Connecting Power BI to Elementary
 
-Navigate to the **Account settings > Environments** and choose the environment to which you would like to connect Elementary.
+Navigate to the **Account settings > Environments** and choose the environment to which you would like to connect Power BI.
 Choose the Power BI connection and provide the following details to validate and complete the integration.
 
 - **Tenant:** Your Microsoft tenant which is usaully your company's domain. e.g. `my-company.com`
