--- a/docs/cloud/integrations/bi/sigma.mdx
+++ b/docs/cloud/integrations/bi/sigma.mdx
@@ -13,7 +13,7 @@ Make sure you enable 'REST API' privileges for that client.
 
 ### Connecting Sigma to Elementary
 
-Navigate to the **Account settings > Environments** and choose the environment to which you would like to connect Elementary.
+Navigate to the **Account settings > Environments** and choose the environment to which you would like to connect Sigma.
 Choose the Sigma connection and provide the following details to validate and complete the integration.
 
 - **Cloud Provider:** To determine your Sigma cloud provider, Navigate to **Account -> General Settings** under Sigma's **Administration** menu and look for **'Cloud: ...'**. <br/> Should be one of the following:
