--- a/docs/cloud/integrations/bi/thoughtspot.mdx
+++ b/docs/cloud/integrations/bi/thoughtspot.mdx
@@ -6,7 +6,7 @@ After you connect Thoughtspot, Elementary will automatically and continuously ex
 This will provide you end-to-end data lineage to understand your downstream dependencies, called exposures.
 
 
-### Enable Trusted Authentication on a priviliged user
+### Enable Trusted Authentication on a privileged user
 
 For Elementary to access your Thoughtspot instance's API on your behalf of your user, your user should have Trusted Authentication enabled. <br/>
 To enable Trusted Authentication on a user, please follow the [official Thoughtspot documentation](https://developers.thoughtspot.com/docs/trusted-auth-secret-key).<br/>
@@ -19,7 +19,7 @@ It is also possible though to integrate with a regular user, just make sure it c
 
 ### Connecting Thoughtspot to Elementary
 
-Navigate to the **Account settings > Environments** and choose the environment to which you would like to connect Elementary.
+Navigate to the **Account settings > Environments** and choose the environment to which you would like to connect ThoughtSpot.
 Choose the Thoughtspot connection and provide the following details to validate and complete the integration.
 
 - **User Name:** The username of the user you want to use to connect to Thoughtspot.
