small fix to privatelink docs

--- a/docs/cloud/integrations/security-and-connectivity/aws-privatelink-integration.mdx
+++ b/docs/cloud/integrations/security-and-connectivity/aws-privatelink-integration.mdx
@@ -58,6 +58,6 @@ In order to set up a PrivateLink connection with Snowflake, please follow the st
             * 10.0.2.x
             * 10.0.3.x
 
-## Github Enterprise Server
+### Github Enterprise Server
 
 Coming soon!
