--- a/docs/cloud/integrations/dwh/dremio.mdx
+++ b/docs/cloud/integrations/dwh/dremio.mdx
@@ -71,7 +71,7 @@ Provide the following fields:
 ### Connect your metadata store (optional)
 
 If your Dremio sources contains Iceberg tables, you can connect your metadata store (Iceberg catalog) to your environment. This will allow automatically monitoring volume
-and freshness of your Iceberg tables (even if their updates occur outside of Dremio).
+and freshness of your Iceberg tables (even if they are ingested outside of Dremio).
 
 Currently only [AWS Glue](/cloud/integrations/metadata-layer/glue) is supported, though more metadata integrations are planned.
 
