add glue and atlan icons + fix ask us link

--- a/docs/snippets/cloud/integrations/cards-groups/cloud-integrations-cards.mdx
+++ b/docs/snippets/cloud/integrations/cards-groups/cloud-integrations-cards.mdx
@@ -4,6 +4,8 @@ import BiCards from '/snippets/cloud/integrations/cards-groups/bi-cards.mdx';
 import ReverseEtlCards from '/snippets/cloud/integrations/cards-groups/reverse-etl-cards.mdx';
 import CodeRepoCards from '/snippets/cloud/integrations/cards-groups/code-repo-cards.mdx';
 import AlertsDestinationCards from '/snippets/cloud/integrations/cards-groups/alerts-destination-cards.mdx';
+import GovernanceCards from '/snippets/cloud/integrations/cards-groups/governance-cards.mdx';
+import MetadataLayerCards from '/snippets/cloud/integrations/cards-groups/metadata-layer-cards.mdx';
 
 ### Data warehouses
 
@@ -28,3 +30,11 @@ import AlertsDestinationCards from '/snippets/cloud/integrations/cards-groups/al
 ### Alerts & incidents
 
 <AlertsDestinationCards />
+
+### Governance
+
+<GovernanceCards />
+
+### Metadata Layer
+
+<MetadataLayerCards />
