--- a/docs/snippets/cloud/integrations/cards-groups/reverse-etl-cards.mdx
+++ b/docs/snippets/cloud/integrations/cards-groups/reverse-etl-cards.mdx
@@ -23,7 +23,7 @@
   </Card>
   <Card
     title="Ask us"
-    href="https://t2taztilhde.typeform.com/to/mdJoO9lA"
+    href="https://form.typeform.com/to/mdJoO9lA"
     icon="plus"
     iconType="solid"
     color="#F2386C"
