--- a/docs/cloud/integrations/metadata-layer/glue.mdx
+++ b/docs/cloud/integrations/metadata-layer/glue.mdx
@@ -2,7 +2,7 @@
 title: "Glue"
 ---
 
-The AWS Glue integration in Elementary will allow you to automatically monitor our Iceberg tables in Glue, by continouously syncing metadata about Iceberg snapshots.
+The AWS Glue integration in Elementary will allow you to automatically monitor volume & freshness anomalies in your Iceberg tables in Glue, by continouously syncing metadata about Iceberg snapshots.
 
 <Note>
   If you connected Amazon Athena as your DWH integration - there's no need to add a Glue integration, as the Athena integration already 
