Ele 5131 add documentation for adding glue integration (#2032)
* catalog -> governance

* add glue docs

* BI small docs fixes

* small fix to privatelink docs

* small fixes

* add glue and atlan icons + fix ask us link

* doc fix

--- a/docs/cloud/integrations/dwh/dremio.mdx
+++ b/docs/cloud/integrations/dwh/dremio.mdx
@@ -68,5 +68,11 @@ Provide the following fields:
 - **User:** The email address of the Elementary user.
 - **Token:** The token you generated for the Elementary user.
 
+### Connect your metadata store (optional)
+
+If your Dremio sources contains Iceberg tables, you can connect your metadata store (Iceberg catalog) to your environment. This will allow automatically monitoring volume
+and freshness of your Iceberg tables (even if they are ingested outside of Dremio).
+
+Currently only [AWS Glue](/cloud/integrations/metadata-layer/glue) is supported, though more metadata integrations are planned.
 
 <OnboardingHelp />
