--- a/docs/cloud/integrations/metadata-layer/glue.mdx
+++ b/docs/cloud/integrations/metadata-layer/glue.mdx
@@ -5,7 +5,7 @@ title: "Glue"
 The AWS Glue integration in Elementary will allow you to automatically monitor volume & freshness anomalies in your Iceberg tables in Glue, by continouously syncing metadata about Iceberg snapshots.
 
 <Note>
-  This integration is currently only supported together with the Dremio engine. We plan to add other engines in the near future.
+  This integration is currently only supported with the Dremio engine. We plan to add other engines in the near future.
 </Note>
 
 ## AWS Setup
