Update integration title from 'Metadata Layer' to 'Iceberg catalog'

--- a/docs/snippets/cloud/integrations/cards-groups/cloud-integrations-cards.mdx
+++ b/docs/snippets/cloud/integrations/cards-groups/cloud-integrations-cards.mdx
@@ -35,6 +35,6 @@ import MetadataLayerCards from '/snippets/cloud/integrations/cards-groups/metada
 
 <GovernanceCards />
 
-### Metadata Layer
+### Iceberg catalog
 
 <MetadataLayerCards />
