added recommended rules for mcp

--- a/docs/cloud/mcp/intro.mdx
+++ b/docs/cloud/mcp/intro.mdx
@@ -11,6 +11,8 @@ icon: "message-code"
   </Card>
   <Card title="Available MCP Tools" icon="gear-code" href="/cloud/mcp/mcp-tools">
   </Card>
+  <Card title="Recommended Rules" icon="book" href="/cloud/mcp/recommended-rules">
+  </Card>
 </Columns>
 
 The Elementary MCP Server allows you to connect your Elementary environment to any client that supports MCP (Model Context Protocol). This lets AI agents, copilots, or natural language interfaces query and act on your data stack using live context.
