--- a/docs/cloud/mcp/overview.mdx
+++ b/docs/cloud/mcp/overview.mdx
@@ -3,10 +3,12 @@ title: "Elementary MCP Server"
 sidebarTitle: "MCP overview"
 ---
 
-<Columns cols={2}>
+<Columns cols={3}>
   <Card title="MCP Setup Guide" icon="code-compare" href="/cloud/mcp/setup-guide">
   </Card>
   <Card title="Available MCP Tools" icon="gear-code" href="/cloud/mcp/mcp-tools">
+  </Card>
+  <Card title="Recommended Rules" icon="book" href="/cloud/mcp/recommended-rules">
   </Card>
 </Columns>
 
