--- a/docs/cloud/mcp/recommended-rules.mdx
+++ b/docs/cloud/mcp/recommended-rules.mdx
@@ -5,6 +5,8 @@ sidebarTitle: "Recommended rules"
 
 <Accordion title="Asset Discovery and Metadata">
 
+asset-discovery-and-metadata.mdc
+
 ```mdc
 ---
 description: "Use Elementary MCP for authoritative asset and metadata discovery."
@@ -30,6 +32,8 @@ alwaysApply: true
 
 <Accordion title="Elementary Best Practices">
 
+elementary-best-practices.mdc
+
 ```mdc
 ---
 description: "General best practices when interacting with Elementary MCP."
@@ -37,7 +41,7 @@ alwaysApply: true
 ---
 
 ## Guidance
-- Work in a context of a specific environment. If not provided in ad Ask the user for the environment they want to work in.
+- Work in a context of a specific environment. If not provided in advance, ask the user for the environment they want to work in.
 - Apply filters (name, tag, owner, time range) to narrow scope.
 - Before applying any detailed filters, begin by retrieving a count of assets. This provides a sense of the dataset size, allowing you to iteratively apply filters (such as by name, tag, owner, or time window) to efficiently narrow your results.
 - Use lightweight mode or limit fields for large result sets.
@@ -51,6 +55,8 @@ alwaysApply: true
 </Accordion>
 
 <Accordion title="Impact Analysis and Lineage">
+
+impact-analysis-and-lineage.mdc
 
 ```mdc
 ---
@@ -79,6 +85,8 @@ alwaysApply: true
 
 <Accordion title="Incidents and Data Health">
 
+incidents-and-data-health.mdc
+
 ```mdc
 ---
 description: "Use Elementary MCP to investigate incidents, data-quality issues and assess asset health."
@@ -106,6 +114,8 @@ alwaysApply: true
 </Accordion>
 
 <Accordion title="Pre-Deploy Impact Guardrails">
+
+pre-deploy-impact-guardrails.mdc
 
 ```mdc
 ---
