added cursor prompt

--- a/docs/cloud/mcp/recommended-rules.mdx
+++ b/docs/cloud/mcp/recommended-rules.mdx
@@ -142,3 +142,8 @@ alwaysApply: true
 
 </Accordion>
 
+## Paste into cursor to apply rules!
+
+```placeholder
+Can you read the rules in this link https://docs.elementary-data.com/cloud/mcp/recommended-rules  and save them to separate files?
+```
