changed cursor prompt

--- a/docs/cloud/mcp/recommended-rules.mdx
+++ b/docs/cloud/mcp/recommended-rules.mdx
@@ -145,5 +145,6 @@ alwaysApply: true
 ## Paste into cursor to apply rules!
 
 ```placeholder
-Can you read the rules in this link https://docs.elementary-data.com/cloud/mcp/recommended-rules  and save them to separate files?
+Add the rules from here to the project rules
+https://docs.elementary-data.com/cloud/mcp/recommended-rules
 ```
