--- a/docs/cloud/integrations/metadata-layer/glue.mdx
+++ b/docs/cloud/integrations/metadata-layer/glue.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Glue"
+title: "AWS Glue"
 ---
 
 The AWS Glue integration in Elementary will allow you to automatically monitor volume & freshness anomalies in your Iceberg tables in Glue, by continouously syncing metadata about Iceberg snapshots.
