--- a/docs/cloud/integrations/code-repo/connect-code-repo.mdx
+++ b/docs/cloud/integrations/code-repo/connect-code-repo.mdx
@@ -7,7 +7,7 @@ import CodeRepoCards from '/snippets/cloud/integrations/cards-groups/code-repo-c
 
 
 
-We believe configuration should be managed in code.
+We believe [configuration should be managed in code](/cloud/features/config-as-code).
 
 With config-as-code you get: version control, CI, review process.
 Adding and updating configuration becomes part of your development process.
