--- a/docs/cloud/guides/sync-scheduling.mdx
+++ b/docs/cloud/guides/sync-scheduling.mdx
@@ -9,7 +9,7 @@ The data on your Elementary Cloud environments is updated by syncing the local E
 There are 2 available scheduling options:
 
 1. **Hourly syncs** - By default, Elementary Cloud syncs data from your Elementary schema on an hourly basis. This means that within the one-hour time window, your data may not be up-to-date.
-2. **Triggered syncs** - Configure a webhook that will trigger a sync after your data pipeline has finished running. This configuration is recommended, as it's as close as possible to real time.
+2. **Triggered syncs** - Configure a webhook that will trigger a sync after your data pipeline has finished running. This configuration is recommended, as it's as close as possible to real time. As a backup, Elementary still keeps a sync that runs every 4 hours.
 
 ## Triggered syncs using webhook
 
