--- a/docs/cloud/features/multi-env.mdx
+++ b/docs/cloud/features/multi-env.mdx
@@ -11,4 +11,15 @@ import CloudFeatureTag from '/snippets/cloud/cloud-feature-tag.mdx';
 An environment in Elementary is a combination of a dbt project and a target. 
 For example: If you have a single dbt project with three targets, prod, staging and dev, you can create 3 environments in Elementary and monitor these environments. 
 
-If you have several dbt projects and even different data warehouses, Elementary enables monitoring the data quality of all these environments in a single interface.
+If you have several dbt projects and even different data warehouses, Elementary enables monitoring the data quality of all these environments in a single interface. Simply click on "Create environment" and set up all integration connections.
+
+
+<Frame>
+  <div className="dark:bg-white rounded-md p-4">
+    <img
+      height ="400"
+      width="400"
+      src="https://res.cloudinary.com/do5hrgokq/image/upload/v1763375225/Screenshot_2025-11-17_at_12.24.03_yrt9co.png"
+    />
+  </div>
+</Frame>
