--- a/docs/cloud/features/multi-env.mdx
+++ b/docs/cloud/features/multi-env.mdx
@@ -13,12 +13,11 @@ For example: If you have a single dbt project with three targets, prod, staging 
 
 If you have several dbt projects and even different data warehouses, Elementary enables monitoring the data quality of all these environments in a single interface. Simply click on "Create environment" and set up all integration connections.
 
+Elementary will soon enable multiple dbt projects in the same environment and lineage.
 
 <Frame>
   <div className="dark:bg-white rounded-md p-4">
     <img
-      height ="400"
-      width="400"
       src="https://res.cloudinary.com/do5hrgokq/image/upload/v1763375225/Screenshot_2025-11-17_at_12.24.03_yrt9co.png"
     />
   </div>
