--- a/docs/cloud/guides/dev-prod-configuration.mdx
+++ b/docs/cloud/guides/dev-prod-configuration.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Configuring Elementary for Development and Production"
+title: "Elementary for Development and Production"
 sidebarTitle: "Dev/Prod configuration"
 ---
 
