--- a/docs/oss/general/troubleshooting.mdx
+++ b/docs/oss/general/troubleshooting.mdx
@@ -238,6 +238,8 @@ vars:
 
 ```
 
+For more comprehensive strategies to reduce on-run-end hooks time, see the [Reduce On-Run-End Hooks Time guide](/oss/guides/reduce-on-run-end-time).
+
 </Accordion>
 
 <Accordion title="I'm trying to run Elementary with dbt-fusion but encountering issues">
