--- a/docs/cloud/guides/reduce-on-run-end-time.mdx
+++ b/docs/cloud/guides/reduce-on-run-end-time.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Reduce On-Run-End Hooks Time"
-sidebarTitle: "Reduce on-run-end time"
+title: "Control On-Run-End Hooks"
+sidebarTitle: "Control on-run-end time"
 ---
 
 import ReduceOnRunEndTime from '/snippets/guides/reduce-on-run-end-time.mdx';
